icons and logo added

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/icon_24.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat Clipper v0.1</title>
+    <title>Clip-it</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+
